dc/s2n-quic-dc/src/snapshots/endpoint__tests__deterministic__sim_path_pair_ids_are_stable_across_identical_runs.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG s2n_quic_dc: capacity=1024
0:00:00.000000000 [main] DEBUG s2n_quic_dc: capacity=1024
0:00:00.000000000 [main] DEBUG s2n_quic_dc: acquire=1µs duration=1µs
0:00:00.000000000 [main] DEBUG s2n_quic_dc: peer_address=10.0.0.2:2222 credential_id=[96, 18, 210, 113, 247, 218, 16, 86, 217, 206, 5, 46, 13, 118, 60, 117]
0:00:00.000000000 [main] DEBUG s2n_quic_dc: acquire=1µs duration=1µs
0:00:00.000000000 [main] DEBUG s2n_quic_dc: peer_address=10.0.0.2:2222 credential_id=[96, 18, 210, 113, 247, 218, 16, 86, 217, 206, 5, 46, 13, 118, 60, 117]
0:00:00.000000000 [main] DEBUG s2n_quic_dc: acquire=1µs duration=1µs
0:00:00.000000000 [main] DEBUG s2n_quic_dc: peer_address=10.0.0.1:1111 credential_id=[224, 18, 210, 113, 247, 218, 16, 86, 217, 206, 5, 46, 13, 118, 60, 117]
0:00:00.000000000 [main] DEBUG s2n_quic_dc: acquire=1µs duration=1µs
0:00:00.000000000 [main] DEBUG s2n_quic_dc: peer_address=10.0.0.1:1111 credential_id=[224, 18, 210, 113, 247, 218, 16, 86, 217, 206, 5, 46, 13, 118, 60, 117]
0:00:00.000000000 [main] DEBUG s2n_quic_dc: capacity=1024 entries=1 lifetime=1µs
0:00:00.000000000 [main] DEBUG s2n_quic_dc: capacity=1024 entries=1 lifetime=1µs
